--- a/CSS Assignments/22 to 26/Assignment-2/main.css
+++ b/CSS Assignments/22 to 26/Assignment-2/main.css
@@ -5,12 +5,12 @@
 }
 
 .class2{
-    font-family: "Cairo", sans-serif;
+    font-family: Cairo, sans-serif;
     font-weight: 700;
 }
 
 .class3{
-    font-family: "Jomhuria", sans-serif;
+    font-family: Jomhuria, sans-serif;
     font-weight: 400;
 
 }
