--- a/CSS Assignments/5 to 8/Assignment/Assignment-1/CSS/Assignment-1.css
+++ b/CSS Assignments/5 to 8/Assignment/Assignment-1/CSS/Assignment-1.css
@@ -1,24 +1,27 @@
-div{
+div {
     width: 500px;
     margin-right: auto;
     margin-left: auto;
     padding: 20px;
     margin-top: 20px;
-    /*background-color: blueviolet;*/
-    /*background-color: #8a2be2;*/
-    /*background-color: HSL(271, 67%, 57%);*/
+
+    /* background-color: blueviolet; */
+
+    /* background-color: #8a2be2; */
+
+    /* background-color: HSL(271, 67%, 57%); */
     color: white;
 }
 
-.assign-1-shape-1{
-    background-color: rgb(138,43,226);
+.assign-1-shape-1 {
+    background-color: rgb(138 43 226);
 
 }
 
-.assign-1-shape-2{
-    background-color: rgba(138,43,226,50%);
+.assign-1-shape-2 {
+    background-color: rgb(138 43 226 / 50%);
 }
 
-.assign-1-shape-3{
-    background-color: rgba(138,43,226,10%);
+.assign-1-shape-3 {
+    background-color: rgb(138 43 226 / 10%);
 }
