--- a/CSS Assignments/30 to 33/Assignment-2/main.css
+++ b/CSS Assignments/30 to 33/Assignment-2/main.css
@@ -5,7 +5,7 @@ div {
     border-width: 2px;
     border-color: #f44336 #2196f3;
     padding: 15px;
-    background-color: #eeeeee;
+    background-color: #eee;
     line-height: 1.9;
     position: relative;
     margin-top: 30px;
