--- a/CSS Assignments/30 to 33/Assignment-4/main.css
+++ b/CSS Assignments/30 to 33/Assignment-4/main.css
@@ -25,7 +25,7 @@ td{
     text-align: center;
     padding: 10px;
     border: 1px solid lightgray;
-    background-color: #eeeeee;
+    background-color: #eee;
 }
 
 span{
