--- a/CSS Assignments/34 to 37/Assignment-1/main.css
+++ b/CSS Assignments/34 to 37/Assignment-1/main.css
@@ -2,7 +2,7 @@ div {
     width: 300px;
     height: 60px;
     text-align: center;
-    background-color: #eeeeee;
+    background-color: #eee;
     padding-top: 30px;
     margin: 30px auto auto;
 }
